# rules_haskell

extensions/: stack_snapshot.bzl
haskell/: cabal.bzl
rules_haskell_tests/: MODULE.bazel  WORKSPACE
rules_haskell_tests/tests/haskell_module/repl/haskell_module_repl_test/: WORKSPACE
tools/cabal_args/: BUILD.bazel
