load("@rules_haskell//haskell:cabal.bzl", "haskell_cabal_args")

haskell_cabal_args(
    name = "empty_library",
    is_empty = True,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
